--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "googleapis": "^169.0.0",
     "ics": "^3.8.1",
     "next": "15.2.5",
     "react": "^19.0.0",
